# typ2

./: .gitignore  README.md  ety-lsp-spec.md  implementation-plan.md  package-lock.json  package.json  specification.md
.github/workflows/: ci.yml
client/: package.json
client/src/: extension.js
client/test/: runTest.js
client/test/suite/: diagnostics.e2e.test.js  helpers.js  index.js  jsx.e2e.test.js  skeleton.e2e.test.js
crates/ety-parser/: Cargo.toml  build.rs  package.json
crates/ety-parser/src/: lib.rs
fixtures/contract/: arrow-block.json  basic-function.json  class-generic.json  concise-arrow-var.json  error-recovery.json  function-expression-const.json  import.json  method-dedupe.json  multi-declarator-multi-line.json  multi-declarator-single-line.json  non-final-line-inert.json  property.json  variable.json
fixtures/engine/: main.js  types.js
fixtures/transform/: basic-function.golden.js  basic-function.input.js  hoist-class.golden.js  hoist-class.input.js  multi-declarator.golden.js  multi-declarator.input.js  shebang.golden.js  shebang.input.js
fixtures/workspace/: box.js  component.jsx  type-error.js
server/: package.json
server/src/: handlers.js  main.js  parser.js  transform.js  tsHost.js
server/test/: contract.test.js  handlers.test.js  lineindex.test.js  orchestration.integration.test.js  scanners.test.js  tojsdoc.test.js  transform-document.test.js  tshost.test.js
